# source-code-kb

./: .gitignore  LICENSE  README.md  config.yaml.example  pyproject.toml
docs/en/: agent-mode.md  architecture.md  cli-usage.md  configuration.md  data-format.md  rest-api.md
docs/zh/: agent-mode.md  architecture.md  cli-usage.md  configuration.md  data-format.md  rest-api.md
skills/source-code-kb-analyzer/: SKILL.md
skills/source-code-kb-analyzer/references/: analysis-prompt.md  correlation-prompt.md  scan-prompt.md  topic-template.md
skills/source-code-kb-analyzer/scripts/: validate_jsonl.py
skills/source-code-kb-ingest/: SKILL.md
skills/source-code-kb-ingest/scripts/: ingest.py
skills/source-code-kb-recall/: SKILL.md
skills/source-code-kb-recall/scripts/: recall.py
src/source_code_kb/: __init__.py  cli.py  config.py
src/source_code_kb/agent/: graph.py  nodes.py  state.py
src/source_code_kb/chat/: session.py
src/source_code_kb/generation/: generator.py  prompts.py
src/source_code_kb/graph/: __init__.py  builder.py  retriever.py  schema.py  store.py
src/source_code_kb/ingest/: indexer.py  jsonl_loader.py
src/source_code_kb/retrieval/: factory.py  fusion.py  query_rewriter.py  reranker.py  retriever.py
src/source_code_kb/server/: app.py  routes.py  schemas.py
tests/: multi_domain.jsonl  test_data.jsonl  test_fusion_retriever.py  test_graph_builder.py  test_graph_retriever.py  test_recall.py
